--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,44 @@
           <target>8</target>
         </configuration>
       </plugin>
+
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0</version>
+        <configuration>
+          <suiteXmlFiles>
+            <!-- Call Suite path -->
+            <suiteXmlFile>src/test/resources/suites/SuiteRunner.xml</suiteXmlFile>
+          </suiteXmlFiles>
+          <testFailureIgnore>true</testFailureIgnore>
+        </configuration>
+      </plugin>
+      <plugin>
+        <!--https://mvnrepository.com/artifact/net.masterthought/maven-cucumber-reporting-->
+        <groupId>net.masterthought</groupId>
+        <artifactId>maven-cucumber-reporting</artifactId>
+        <version>5.7.5</version>
+        <executions>
+          <execution>
+            <id>execution</id>
+            <phase>test</phase>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <configuration>
+              <projectName>CucumberTestNG022023</projectName>
+              <skip>false</skip>
+              <outputDirectory>reports/CucumberReports/cucumber-reports</outputDirectory>
+              <inputDirectory>target/cucumber-reports</inputDirectory>
+              <jsonFiles>
+                <param>**/*.json</param>
+              </jsonFiles>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
